Added Controller EstimateDryTime
